# doom2.0

./: .gitignore  Cargo.toml  package.json  pm2.config.js
electron/: package.json
electron/src/: holochain.ts  index.ts
happ/workdir/: dna.yaml
happ/zomes/coordinator/profiles/: Cargo.toml
happ/zomes/integrity/profiles/: Cargo.toml
scripts/: happ-pack.sh
web/: package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
web/src/: holochainConfig.ts  index.js
web/src/screens/home/: index.js
web/src/screens/login/: index.js
web/src/screens/room/: index.js  styles.css
web/src/zomes/: index.js
