[package]
name = "profiles_coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_coordinator"

[dependencies]
hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", rev = "dc4f528", package = "hc_zome_profiles_coordinator"}
