[package]
name = "profiles_integrity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "profiles_integrity"
crate-type = ["cdylib", "rlib"]


[dependencies]
hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", rev = "dc4f528", package = "hc_zome_profiles_integrity"}
